feat(romantic_event): mass creation of step options
